--- a/index.html
+++ b/index.html
@@ -4,79 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sushen website</title>
-    <link rel="stylesheet"type="text/css" a href="mystyle.css">
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
-<body 
-    <h1>My first heading</h1>
-    <p >My first Paragraph</p>
-    <br>
-    <a href="https://www.google.com"target=_blank>This is goggle website link</a>
-    <br>
-    <br>
-    <img src="E:\images.jpg"alt="human image"width="104" height="142">
-    <p style="color: blue;">This is Me</p>
-   <h1 style="font-size: 60px;">Hello world</h1
-<p>This is paragraph.</p>
-<h1 >Hello Programmers</h1>
-<b>the Text is bold</b>
-<i>the Text is italic</i>
-<strong>The text is important</strong>
-<em>the Text is emphasized</em>
-<small>this is smaller text</small>
-<mark>do not Forget to buy</mark>
-<del>bule colour</del>
-<P>My favourite color is<del>blue</del><ins>Red</ins></P>
-<p>this is <sub>Subscripted text</sub></p>
-<P> this is<sup>Superscripted text</sup>
-    <br>
-<img src="E:\download.jpg"alt="human image">
-<br><br>
-<img style="text-align: center;" src="E:\Cell-Phone-Detection-Device-scaled-500x383.jpg" height="142"width="121">
-<p>The <abbr tittle="World Health Organization">WHO</abbr>Was founded in 1948.</p>
-<address>Written By Sushen</address>
-Visit us at:<br>
-Box 564,chattogram</br>
-<p>Http means:<abbr>Hyper Text transfer Protocol</abbr></p>
-<!--Writh Your comment here-->
-<P>hello world</P>
-<h1 style="color: blueviolet;">Sushen website</h1>
-<p style="color: antiquewhite;">Hello World</p>
-<h1 style="border: 2px solid blueviolet;">Hello world</h1>
-<p style="border: 1 px soloid green;">Hello world</p>
-<p style="color: red;">a red paragraph</p>
-<table border="1 px" cellspacing="0 px" cellpadding="20 px"width=60%  bgcolor="red" align="center">
-   
-    <tr bgcolor="yellow">
-        <th>Company</th>
-        <th>Contact</th>
-        <th>Country</th>
-    </tr>
-    <tr>
-        <td>alfreds futterkisete</td>
-        <td>Maria andress</td>
-        <td>Germany</td>
-    </tr>
-    <tr>
-        <td>centrol commercial moctezuma</td>
-        <td>Francisco chang</td>
-        <td>Mexico</td>
-    </tr>
-</table>
-</address>
-<br><br>
-<table border="1px"cellspacing="0 px">
-<th>Name</th>
-<th colspan="2">Mobile Number</th>
-<tr>
-    <td>Sushen chakraborty</td>
-    <td>01631998662</td>
-    <td>01829664870</td>
-</tr>
-</table>
-<h3>Css Selectors</h3>
-<p id="redellement">this is a simple pargarph text</p>
-<p id="Secondpera"class="redellement bgblue">This is another Simple paragraph textarea</p>
-<span>This is  span</span>
-<footer>This is Footer</footer>
+<body>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <div class="dropdown">
+            <button class="dropbtn">Dropdown</button>
+            <div class="dropdown-content">
+                <a href="https://puc.ac.bd/">Premier University</a>
+                <a href="https://cse.puc.ac.bd/Home/FacultyMembers">Deprtmet of Cse</a>
+                <a href="https://www.google.com/">Goggle website</a>
+            </div>
+        </div>
+    </nav>
+<p id="Ip" >Internnet programming</p>
+    <h1 class="container">My first heading</h1>
+    <p class="container">My first Paragraph</p>
+    
+    <div class="example">
+        <p>This is a paragraph with !important</p>
+    </div>
+
+    <div class="image-gallery">
+        <img src="download (1).jpg" alt="Image 1">
+        <img src="download.jpg" alt="Image 2">
+        <img src="images.jpg" alt="Image 3">
+    </div>
+
+    <table class="container">
+        <tr>
+            <th>Header 1</th>
+            <th>Header 2</th>
+            <th>Header 3</th>
+        </tr>
+        <tr>
+            <td>Data 1</td>
+            <td>Data 2</td>
+            <td>Data 3</td>
+        </tr>
+        <tr>
+            <td>Data 4</td>
+            <td>Data 5</td>
+            <td>Data 6</td>
+        </tr>
+    </table>
+
 </body>
 </html>
