--- a/index.html
+++ b/index.html
@@ -3,55 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sushen website</title>
-    <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <title>Css level1</title>
+    <link  rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="navbar">
+<a id="logo" href="#">amazon.in</a>
+<a href="#">Account</a>
+<a href="#">My Cart</a>
+<a href="#">Contact Us</a>
+<input placeholder="search Amazon.in">
+    <button>Search</button>
+</div>
+  <h1>Internet programming</h1>
+  <h1 id="heading1">This is a heading1</h1>
+  <h1 id="heading2">This is a heading2</h1>
+  <h1 id="heading3">This is a heading3</h1>
 
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-        <div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
-            <div class="dropdown-content">
-                <a href="https://puc.ac.bd/">Premier University</a>
-                <a href="https://cse.puc.ac.bd/Home/FacultyMembers">Deprtmet of Cse</a>
-                <a href="https://www.google.com/">Goggle website</a>
-            </div>
-        </div>
-    </nav>
-<p id="Ip" >Internnet programming</p>
-    <h1 class="container">My first heading</h1>
-    <p class="container">My first Paragraph</p>
-    
-    <div class="example">
-        <p>This is a paragraph with !important</p>
-    </div>
-
-    <div class="image-gallery">
-        <img src="download (1).jpg" alt="Image 1">
-        <img src="download.jpg" alt="Image 2">
-        <img src="images.jpg" alt="Image 3">
-    </div>
-
-    <table class="container">
-        <tr>
-            <th>Header 1</th>
-            <th>Header 2</th>
-            <th>Header 3</th>
-        </tr>
-        <tr>
-            <td>Data 1</td>
-            <td>Data 2</td>
-            <td>Data 3</td>
-        </tr>
-        <tr>
-            <td>Data 4</td>
-            <td>Data 5</td>
-            <td>Data 6</td>
-        </tr>
-    </table>
-
+ <p>This is  a simple & normal paragraph</p>
+ <p id="Santi">This is Santi</p>
+ <button>Click me </button>
+ <br><br>
+ <div id="box">
+    this is a simple  text
+ </div>
+ <h1 class="heading">Heading  1</h1>
+ <h2 class="heading">Heading 2</h2>
+ <h3 class="heading">heading 3</h3>
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, at.</p>
+ <a  href="https://www.google.com" target="_blank">Click me</a>
+ <p id="newtext">this is my first trying</p>
+ <p id="One">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit quia amet optio natus iusto iure commodi harum minus hic error, neque illum eligendi. Dignissimos vitae, officiis ea nesciunt quam a?</p>
+ <p id="two">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto consequuntur, accusantium obcaecati necessitatibus commodi ullam? Quis, a?</p>
 </body>
+<div class="div">This is a div</div>
+<br>
+<div id="div1">This is another</div>
+<div class="contentbox"></div>
+<div class="contentbox"></div>
+<div class="contentbox"></div>
+<p id="new">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum aperiam blanditiis officia distinctio, nesciunt eveniet?</p>
+<div id="Hello">Love Nature</div>
+<p>Lorem ipsum dolor sit amet.</p>
 </html>
