--- a/project.html
+++ b/project.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
-<body style="background: url(premier\ university.jpg.jpeg) no-repeat center center fixed; background-size: cover;">
+<body style="background: url(puc.jpeg) no-repeat center center fixed; background-size: cover;">
     <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
         <!-- Navbar content -->
 
         <nav class="navbar navbar-expand-lg navbar-light bg-dark navbar-dark">
 
             <a class="navbar-brand" href="#">
-                <img src="logo.jpg.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
+                <img src="logo.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
                 Premier University
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
